# public/swagger.json
@@ -6,6 +6,14 @@
     },
     "paths": {
         "/v1/api/marketing": {
+            "get": {
+                "summary": "Verifica os emails marketings enviados",
+                "responses": {
+                    "200": {
+                        "description": "Confirmação de envio de email marketing"
+                    }
+                }
+            },
             "post": {
                 "summary": "Envia um email marketing",
                 "parameters": [
